--- a/JS-04-04/style.css
+++ b/JS-04-04/style.css
@@ -20,13 +20,41 @@ body {
 }
 
 .wrapper {
-    border: 2px solid black;
+    border: 1px solid black;
     border-radius: 5px;
     padding: 2rem;
     display:flex;
     flex-direction: column;
     width:25%;
     gap:10px;
+    font-size: 16px;
+    box-shadow: 2px 4px 16px 1px #444;
+}
+
+.wrapper > button {
+    width:50%;
+    align-self: center;
+    background:none;
+    padding:0.5rem;
+    border-radius:5px;
+    font-weight: 700;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+    margin-top: 10px;
+    border:1px solid #444;
+}
+.wrapper > button:hover{
+    background:black;
+    color:#FFF;
+
+}
+
+.wrapper > select {
+    width:70%;
+    align-self: center;
+    text-align: center;
+    font-size: 16px;
+    border-radius:5px;
 }
 
 li {
