--- a/TS-04-10/styles.css
+++ b/TS-04-10/styles.css
@@ -1,71 +1,85 @@
-        body,
-        body * {
-            box-sizing: border-box;
-            vertical-align: top;
-            margin: 0;
-            padding: 0;
-        }
+    body,
+    body * {
+        box-sizing: border-box;
+        vertical-align: top;
+        margin: 0;
+        padding: 0;
+    }
 
-        body {
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        }
+    body {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
 
-        .container {
-            display: grid;
-            border: 2px solid black;
-            width: 50%;
-            margin: 0 auto;
-            margin-top: 10vh;
-        }
+    li {
+        list-style-type: none;
+    }
 
-        .container>h1 {
+    .container {
+        display: grid;
+        border: 2px solid black;
+        width: 50%;
+        margin: 0 auto;
+        margin-top: 10vh;
+    }
+
+    .container>h1 {
+        text-align: center;
+        background:#eee;
+        padding:10px;
+    }
+
+    .main-container {
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+        background:#ddd;
+        padding:15px;
+    }
+    .container-add-employee {
+        display:flex;
+        flex-direction: column;
+        gap:10px;
+    }
+    .container-add-employee h3{
             text-align: center;
         }
+    .container-add-employee button, input {
+        width:70%;
+        margin: 0 auto;
+        padding:10px;
+    }
 
-        .employee-container {
+    .employee-container {
+        display:flex;
+        justify-content: left;
+        align-items: center;
+        background: #ddd;
+    }
+
+    .employee-list {
+        display:flex;
+        flex-direction: column;
+        width: 100%;
+        
+    }
+
+        .employee-container li {
+            font-size: 25px;
             display: flex;
-
-            background: #dedede;
-        }
-
-        .employee-list {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            font-size: 20px;
-            font-weight: 600;
-            width: 100%;
-        }
-
-        .employee-list li {
-            list-style-type: none;
-            padding: 10px;
+            gap:20px;
             border-bottom: 1px solid black;
+            padding: 10px;
+            padding-left: 100px;
         }
+         .delete-button {
+            padding:5px;
+            cursor: pointer;
+         }
 
-        .employee-list li:first-child {
-            border-top: 1px solid black;
-        }
-
-        .employee-list li:last-child {
-            border: none;
-        }
-
-        .container-add-eployee {
-            display: flex;
+         .container-employee-info{
+            display:flex;
             flex-direction: column;
-            justify-content: center;
-            gap: 10px;
-            margin-bottom: 10px;
-            width: 50%;
-        }
-
-        .container-add-eployee h3 {
-            text-align: center;
-        }
-
-        .container-add-eployee input {
-            width: 100%;
-            height: 30px;
-            text-align: center;
-        }
+            gap:10px;
+         }
+         .container-employee-info span {
+            font-size: 18px;
+         }
